--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,36 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Form Submission</title>
+<style>
+    body {
+        background-color: black;
+        color: white;
+        font-family: Arial, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+    }
+    form {
+        text-align: center;
+        border: 1px solid white;
+        padding: 20px;
+        border-radius: 5px;
+    }
+    input[type="text"], input[type="submit"] {
+        margin: 10px 0;
+    }
+</style>
 </head>
 <body>
-<h2>Submit Your Prompt</h2>
-<form action="/prompt" method="post">
-    <label for="prompt">Prompt:</label><br>
-    <input type="text" id="prompt" name="prompt" required><br>
-    <input type="submit" value="Submit">
-</form>
+<div>
+    <h2>Submit Your Prompt</h2>
+    <form action="/prompt" method="post">
+        <label for="prompt">Prompt:</label><br>
+        <input type="text" id="prompt" name="prompt" required><br>
+        <input type="submit" value="Submit">
+    </form>
+</div>
 </body>
 </html>
